--- a/Test3/Assembly-CSharp.csproj
+++ b/Test3/Assembly-CSharp.csproj
@@ -113,6 +113,7 @@
      <Compile Include="Assets\Scripts\Scene\MainMenu.cs" />
      <Compile Include="Assets\Scripts\Scene\PauseMenu.cs" />
      <Compile Include="Assets\Scripts\Scene\ScoreManager.cs" />
+     <Compile Include="Assets\Scripts\Scene\UI\CreditsScript.cs" />
      <Compile Include="Assets\Scripts\Scene\UI\PlayerCamera.cs" />
      <Compile Include="Assets\Scripts\Scene\WorldScaler.cs" />
      <None Include="Assets\Materials\$Sprites-Bumped Diffuse.shader" />
